@@ -1,4 +1,5 @@
 0.6.0
+Fixed tools run sync/async.
 Speed tweaks for find definition.
 Fixed auto indent.
 Done find/replace.
